--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,4 @@
-language: python
-python:
-  - "3.4"
-  - "3.5"
-  - "3.6"      # current default Python on Travis CI
-  - "3.7"
-# command to install dependencies
-# Maybe needed in later stages
-#install:
-#  - pip install -r requirements.txt
+language: java
 
 stages:
   - test
