--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: java
 
 stages:
+  - compile
   - test
-  - build
   - name: deploy
     # require the branch name to be master
     if: branch = master
 jobs:
   include:
-    - stage: test
-      script: skip # to be added
     - stage: build
-      script: skip # to be added
+      script: cd StudentGroupingOrganiser/ && mvn compile
+    - stage: test
+      script: cd StudentGroupingOrganiser/ && mvn test
     - stage: deploy
       script: skip # to be added
