--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
                         <goals>
                             <goal>repackage</goal>
                         </goals>
+                      <configuration>
+                        <mainClass>ic.doc.sgo.springframework.OrganiserApplication</mainClass>
+                      </configuration>
                     </execution>
                 </executions>
             </plugin>
